# no-representation-no-trust

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: Dockerfile  README.md  compose-base.yaml  template.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/dependencies/: apt-runtime.txt  requirements.txt  update-env-file.sh
installation/docker-amd64-cuda/entrypoints/: entrypoint.sh  remote-development-setup.sh
outputs/: README.md  poster.key
reproducibility-scripts/: README.md  plotting.ipynb  template-experiment.sh  template-sweep.yaml
reproducibility-scripts/dev/cleanrl-ppo/: getting-to-modern-setting.sh  replicate-with-cleanrl.sh
reproducibility-scripts/release/atari-ppo/: baselines.yaml  capacity-all.yaml  control-adam-beta.yaml  control-optimizer.yaml  control-regularize-all-layers.yaml  control-regularize.yaml  control-shared-trunk.yaml  get-all-runs-for-capacity.sh
reproducibility-scripts/release/mujoco-ppo/: baselines.yaml  capacity-all.yaml  control-adam-beta.yaml  control-optimizer.yaml  control-regularize-relu.yaml  control-regularize-tanh.yaml  control-shared-trunk.yaml  get-all-runs-for-capacity.sh
reproducibility-scripts/utils/: run-in-parallel.sh
src/cleanrl/: ppo_atari_1model.py  ppo_atari_2models.py
src/po_dynamics/: capacity.py  solve.py  template_experiment.py  toy_problem.py
src/po_dynamics/configs/: capacity.yaml  (+2 more)
template/: template-variables.env
(+45 files in other folders)
